--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,12 +1,15 @@
 ---
 driver:
   name: docker
+  use_sudo: false
+  socket: <%= ENV['DOCKER_HOST'] %>
 
 provisioner:
   name: chef_zero
 
 platforms:
   - name: ubuntu-14.04
+  - name: centos-6.5
 
 suites:
   - name: default
